--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: cpp
 dist: xenial
+
 compiler:
   - clang
   - gcc
+
 os:
 - linux
+  addons:
+    apt:
+      sources:
+        - ubuntu-toolchain-r-test
+      packages:
+        - g++-7
+
+before_install:
+    - eval "CC=gcc-7 && CXX=g++-7"
+
 script: mkdir build && cd build && cmake .. && make
