--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,10 @@ compiler:
   - gcc
 os:
 - linux
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-7
 script: mkdir build && cd build && cmake .. && make
