--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-7
+before_install:
+  - eval "CC=gcc-7 && CXX=g++-7"
 script: mkdir build && cd build && cmake .. && make
