--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ addons:
     - g++-7
 before_install:
   - eval "CC=gcc-7 && CXX=g++-7"
-script: mkdir build && cd build && cmake .. && make
+script: mkdir build && cd build && cmake ../src && make
